双击退出功能 ， 新特性

--- a/app/src/main/res/menu/activity_main_drawer.xml
+++ b/app/src/main/res/menu/activity_main_drawer.xml
@@ -37,6 +37,12 @@
                 android:icon="@drawable/ic_menu_send"
                 android:title="夜间模式"
                 />
+
+            <item
+                android:id="@+id/side_quit"
+                android:icon="@drawable/ic_menu_send"
+                android:title="退出登录"
+                />
         </menu>
     </item>
 
