--- a/app/src/main/res/values/styles.xml
+++ b/app/src/main/res/values/styles.xml
@@ -112,5 +112,10 @@
         <item name="android:windowEnterAnimation">@anim/animation_in</item>
         <item name="android:windowExitAnimation">@anim/animation_out</item>
     </style>
+    <style name="anim_menu_bottombar">
+        <item name="android:windowEnterAnimation">@anim/bottom_in</item>
+        <item name="android:windowExitAnimation">@anim/bottom_out</item>
+    </style>
+
 
 </resources>
