--- a/app/src/main/res/layout/activity_write__read.xml
+++ b/app/src/main/res/layout/activity_write__read.xml
@@ -3,31 +3,140 @@
     android:orientation="vertical" android:layout_width="match_parent"
     android:layout_height="match_parent">
     <RelativeLayout
+        android:id="@+id/Write_ChapterTop"
         android:layout_width="match_parent"
-        android:layout_height="35dp"
+        android:layout_height="wrap_content"
         android:background="@drawable/footer_head_border">
+
         <ImageView
-            android:paddingTop="10dp"
+            android:paddingTop="15dp"
             android:paddingLeft="10dp"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
+            android:onClick="Back_Article"
             android:background="@null"
             android:src="@drawable/fanhui" />
-        <TextView
-            android:layout_centerInParent="true"
+        <LinearLayout
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:textColor="@color/black"
-            android:text="续写章节"/>
+            android:layout_centerInParent="true"
+            android:background="@null"
+            >
+            <TextView
+                android:paddingTop="15dp"
+                android:paddingBottom="15dp"
+                android:id="@+id/ArticleName"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:background="@null"
+                android:textStyle="bold"
+                android:text="封面" />
+        </LinearLayout>
     </RelativeLayout>
-    <TextView
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:text="           "/>
-    <RelativeLayout
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content">
 
-    </RelativeLayout>
+    <ListView
+        android:layout_below="@+id/Write_ChapterTop"
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
+        android:id="@+id/Write_read"></ListView>
+    <LinearLayout
+        android:id="@+id/Write_ChapterButtom"
+        android:layout_width="match_parent"
+        android:layout_height="50dp"
+        android:layout_alignParentBottom="true"
+        android:background="@drawable/footer_head_border"
+        android:weightSum="4">
+        <LinearLayout
+            android:onClick="PeopleVote"
+            android:orientation="vertical"
+            android:layout_width="0sp"
+            android:layout_weight="1"
+            android:layout_height="wrap_content"
+            >
+            <ImageView
+                android:paddingTop="10dp"
+                android:id="@+id/Vote_image"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_gravity="center"
+                android:src="@drawable/toupiao"/>
+            <TextView
+                android:layout_gravity="center"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:textSize="13sp"
+                android:background="@null"
+                android:text="投 票" />
+        </LinearLayout>
+
+        <LinearLayout
+            android:onClick="PeopleCommand"
+            android:orientation="vertical"
+            android:layout_width="0sp"
+            android:layout_weight="1"
+            android:layout_height="wrap_content"
+            >
+            <ImageView
+                android:paddingTop="10dp"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_gravity="center"
+                android:src="@drawable/pinglun"/>
+            <TextView
+                android:layout_gravity="center"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:textSize="13sp"
+                android:background="@null"
+                android:text="评 论" />
+        </LinearLayout>
+
+        <LinearLayout
+            android:onClick="PeopleShare"
+            android:orientation="vertical"
+            android:layout_width="0sp"
+            android:layout_weight="1"
+            android:layout_height="wrap_content"
+            >
+            <ImageView
+                android:paddingTop="10dp"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_gravity="center"
+                android:src="@drawable/fenxiang"/>
+            <TextView
+                android:layout_gravity="center"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:textSize="13sp"
+                android:background="@null"
+                android:text="分 享" />
+        </LinearLayout>
+
+        <LinearLayout
+            android:onClick="PeopleFocus"
+            android:orientation="vertical"
+            android:layout_width="0sp"
+            android:layout_weight="1"
+            android:layout_height="wrap_content"
+            >
+            <ImageView
+                android:paddingTop="10dp"
+                android:id="@+id/Focus_image"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_gravity="center"
+                android:src="@drawable/guanzhu"/>
+            <TextView
+                android:layout_gravity="center"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:textSize="13sp"
+                android:background="@null"
+                android:text="关 注" />
+        </LinearLayout>
+
+    </LinearLayout>
+
 
 </RelativeLayout>
