添加了个人中心的布局

--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -25,4 +25,5 @@
     <color name="white">#faf8fa</color>
     <color name="darkgray">#c4c3c4</color>
     <color name="yellow">#fc980d</color>
+    <color name="blue">#2e27f9</color>
 </resources>
