--- a/app/src/main/res/layout/activity_write__read.xml
+++ b/app/src/main/res/layout/activity_write__read.xml
@@ -30,6 +30,7 @@
                 android:layout_height="wrap_content"
                 android:background="@null"
                 android:textStyle="bold"
+                android:textColor="@color/black"
                 android:text="封面" />
         </LinearLayout>
     </RelativeLayout>
