--- a/app/src/main/res/layout/listview_write_read.xml
+++ b/app/src/main/res/layout/listview_write_read.xml
@@ -5,8 +5,8 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent">
     <TextView
-        android:paddingTop="10dp"
-        android:paddingLeft="10dp"
+        android:paddingTop="20dp"
+        android:paddingLeft="20dp"
         android:textSize="15dp"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
@@ -14,9 +14,10 @@
         android:text="第四章 桃枝"/>
     <TextView
         android:paddingTop="10dp"
-        android:paddingLeft="10dp"
+        android:paddingLeft="20dp"
+        android:paddingRight="20dp"
         android:textSize="17dp"
-        android:lineSpacingExtra="5sp"
+        android:lineSpacingExtra="10sp"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:id="@+id/Write_ChapterContent"
@@ -57,6 +58,7 @@
         android:paddingBottom="20dp"
         android:id="@+id/Write_ArticleTime"
         android:gravity="right"
+        android:textSize="15sp"
         android:text="更新于 2016-05-14 14:17"
         />
 
