--- a/app/src/main/res/values/styles.xml
+++ b/app/src/main/res/values/styles.xml
@@ -18,6 +18,17 @@
 
     <style name="AppTheme.PopupOverlay" parent="ThemeOverlay.AppCompat.Light" />
 
+    <style name="button_setting">
+        <item name="android:background">@drawable/button_radio</item>
+        <item name="android:layout_width">0dp</item>
+        <item name="android:layout_weight">1</item>
+        <item name="android:layout_height">45dp</item>
+        <item name="android:layout_marginLeft">10dp</item>
+        <item name="android:layout_marginRight">10dp</item>
+        <item name="android:layout_marginBottom">10dp</item>
+        <item name="android:gravity">center</item>
+    </style>
+
     <style name="regist_edittext_style">
         <!--自定义注册时的edittext类型，这里对光标以及底部线的颜色都进行了改变-->
         <item name="android:layout_width">204dp</item>
@@ -41,12 +52,14 @@
         <item name="android:paddingRight">4dp</item>
         <item name="android:gravity">center_vertical</item>
     </style>
+
     <style name="umeng_socialize_action_bar_item_im">
         <item name="android:layout_width">25dp</item>
         <item name="android:layout_height">25dp</item>
         <item name="android:scaleType">fitCenter</item>
         <item name="android:layout_centerVertical">true</item>
     </style>
+
     <style name="umeng_socialize_action_bar_item_tv">
         <item name="android:layout_width">wrap_content</item>
         <item name="android:layout_height">fill_parent</item>
@@ -57,9 +70,11 @@
         <item name="android:textSize">12sp</item>
         <item name="android:textStyle">bold</item>
     </style>
+
     <style name="umeng_socialize_popup_dialog_anim" parent="@style/umeng_socialize_popup_dialog">
         <item name="android:windowAnimationStyle">@style/umeng_socialize_dialog_animations</item>
     </style>
+
     <style name="umeng_socialize_popup_dialog" parent="@android:style/Theme.Dialog">
         <item name="android:windowFrame">@null</item>
         <item name="android:windowIsFloating">true</item>
@@ -70,28 +85,37 @@
         <item name="android:backgroundDimEnabled">true</item>
         <item name="android:backgroundDimAmount">0.6</item>
     </style>
+
     <style name="umeng_socialize_dialog_animations">
         <item name="android:windowEnterAnimation">@anim/umeng_socialize_slide_in_from_bottom</item>
         <item name="android:windowExitAnimation">@anim/umeng_socialize_slide_out_from_bottom</item>
     </style>
+
     <style name="umeng_socialize_dialog_anim_fade">
         <item name="android:windowEnterAnimation">@anim/umeng_socialize_fade_in</item>
         <item name="android:windowExitAnimation">@anim/umeng_socialize_fade_out</item>
     </style>
+
     <style name="umeng_socialize_shareboard_animation">
-        <item name="android:windowEnterAnimation">@anim/umeng_socialize_shareboard_animation_in</item>
-        <item name="android:windowExitAnimation">@anim/umeng_socialize_shareboard_animation_out</item>
+        <item name="android:windowEnterAnimation">@anim/umeng_socialize_shareboard_animation_in
+        </item>
+        <item name="android:windowExitAnimation">@anim/umeng_socialize_shareboard_animation_out
+        </item>
     </style>
+
     <style name="Theme.UMDialog" parent="android:style/Theme.Dialog">
         <item name="android:windowNoTitle">true</item>
         <item name="android:windowBackground">@android:color/transparent</item>
     </style>
+
     <style name="Theme.UMDefault" parent="android:style/Theme.NoTitleBar" />
+
     <style name="umeng_socialize_divider">
         <item name="android:layout_width">fill_parent</item>
         <item name="android:layout_height">1dp</item>
         <item name="android:background">@color/umeng_socialize_divider</item>
     </style>
+
     <style name="umeng_socialize_list_item">
         <item name="android:layout_width">fill_parent</item>
         <item name="android:layout_height">55dp</item>
@@ -99,6 +123,7 @@
         <item name="android:paddingBottom">5dp</item>
         <item name="android:paddingTop">5dp</item>
     </style>
+
     <style name="umeng_socialize_edit_padding">
         <item name="android:layout_width">fill_parent</item>
         <item name="android:layout_height">fill_parent</item>
@@ -108,10 +133,12 @@
         <item name="android:layout_marginTop">6dp</item>
         <item name="android:layout_marginBottom">6dp</item>
     </style>
+
     <style name="anim_menu_animation">
         <item name="android:windowEnterAnimation">@anim/animation_in</item>
         <item name="android:windowExitAnimation">@anim/animation_out</item>
     </style>
+
     <style name="anim_menu_bottombar">
         <item name="android:windowEnterAnimation">@anim/bottom_in</item>
         <item name="android:windowExitAnimation">@anim/bottom_out</item>
