listview刷新及添加头部

--- a/app/src/main/res/layout/activity_theme_content.xml
+++ b/app/src/main/res/layout/activity_theme_content.xml
@@ -36,7 +36,7 @@
             android:layout_width="30dp"
             android:layout_height="30dp"
             android:layout_marginTop="10dp"
-            android:src="@drawable/back"/>
+            android:src="@drawable/share"/>
     </RelativeLayout>
 
 
