--- a/app/src/main/res/layout/theme_content_listviewhead.xml
+++ b/app/src/main/res/layout/theme_content_listviewhead.xml
@@ -23,7 +23,6 @@
         android:layout_gravity="center"
         android:text="简介"/>
 
-
     <TextView
         android:id="@+id/theme_content_listviewhead_txt"
         android:layout_width="wrap_content"
@@ -32,9 +31,10 @@
         android:text="txt文本"/>
     <ImageView
         android:id="@+id/theme_content_listviewhead_expandimg"
-        android:layout_width="15dp"
-        android:layout_height="15dp"
-        android:src="@drawable/expand"
+        android:layout_width="30dp"
+        android:layout_height="30dp"
+        android:layout_marginTop="5dp"
+       android:src="@drawable/expand"
         android:layout_gravity="center"
         />
 
