--- a/app/src/main/res/layout/listview_article_settings.xml
+++ b/app/src/main/res/layout/listview_article_settings.xml
@@ -63,7 +63,7 @@
             android:layout_width="match_parent"
             android:layout_height="wrap_content">
             <LinearLayout
-
+android:onClick="Downline_Read"
                 android:paddingLeft="100dp"
                 android:orientation="vertical"
                 android:layout_width="wrap_content"
@@ -83,6 +83,7 @@
                     android:text="离线阅读"/>
             </LinearLayout>
             <LinearLayout
+                android:onClick="Report"
                 android:layout_alignParentRight="true"
                 android:paddingRight="100dp"
                 android:orientation="vertical"
