--- a/app/src/main/res/layout/activity_center.xml
+++ b/app/src/main/res/layout/activity_center.xml
@@ -46,8 +46,9 @@
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:text="编辑资料"
-                    android:layout_marginLeft="280dp"
-                    android:layout_marginTop="21dp"
+                   android:layout_gravity="right"
+                    android:paddingRight="16dp"
+                    android:paddingTop="16dp"
                     app:layout_collapseMode="pin"
 
                     />
