--- a/app/src/main/res/layout/activity_edit.xml
+++ b/app/src/main/res/layout/activity_edit.xml
@@ -10,32 +10,39 @@
 
     
     <RelativeLayout
-        android:id="@+id/edit_bg"
+
         android:layout_width="match_parent"
         android:layout_height="match_parent"
         android:layout_weight="6"
-        android:background="#ff00ff"
-        android:paddingTop="10dp"
-        android:paddingLeft="16dp"
-        android:paddingRight="16dp"
+
         >
+      <com.facebook.drawee.view.SimpleDraweeView
+          android:id="@+id/edit_bg"
+          android:layout_width="match_parent"
+          android:layout_height="match_parent" />
         <ImageView
+
+            android:paddingTop="5dp"
             android:id="@+id/edit_back"
-            android:layout_width="30dp"
-            android:layout_height="30dp"
+            android:layout_width="40dp"
+            android:layout_height="40dp"
             android:src="@drawable/back"
-            android:layout_alignTop="@+id/edit_text"
+            android:layout_alignParentTop="true"
             android:layout_alignParentLeft="true"
             android:layout_alignParentStart="true" />
         <TextView
-            android:paddingTop="5dp"
+            android:layout_marginTop="15dp"
+
+
             android:id="@+id/edit_text"
             android:layout_width="wrap_content"
             android:layout_height="30dp"
             android:layout_centerHorizontal="true"
             android:text="修改资料"/>
         <TextView
-            android:paddingTop="5dp"
+            android:layout_marginTop="15dp"
+
+            android:paddingRight="16dp"
             android:id="@+id/edit_save"
             android:layout_width="wrap_content"
             android:layout_height="30dp"
@@ -46,7 +53,7 @@
         android:orientation="vertical"
         android:paddingLeft="16dp"
         android:paddingRight="16dp"
-        android:layout_width="386dp"
+        android:layout_width="match_parent"
         android:layout_height="match_parent"
         android:layout_weight="4"     >
         <RelativeLayout
@@ -223,7 +230,7 @@
                 android:layout_height="wrap_content"
                 android:layout_toLeftOf="@id/edit_sign_arrow"
                 android:layout_marginRight="10dp"
-                android:text="水星"
+                android:text="我是一个努力干活还不粘人的小妖精"
                 />
         </RelativeLayout>
         <LinearLayout
