--- a/app/src/main/res/layout/listview_article.xml
+++ b/app/src/main/res/layout/listview_article.xml
@@ -4,7 +4,9 @@
     android:orientation="vertical"
     android:layout_width="match_parent"
     android:layout_height="match_parent">
-
+<RelativeLayout
+    android:layout_width="match_parent"
+    android:layout_height="wrap_content">
 <TextView
     android:paddingLeft="20dp"
     android:paddingTop="25dp"
@@ -14,7 +16,15 @@
     android:textStyle="bold"
     android:textSize="15sp"
     android:id="@+id/ChapterTitle"/>
-
+    <ImageView
+        android:id="@+id/ShangCi"
+       android:paddingTop="20dp"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_alignParentRight="true"
+        android:paddingRight="20dp"
+        android:src="@drawable/dashang"/>
+</RelativeLayout>
     <TextView
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
