--- a/app/src/main/res/layout/listview_article_settings.xml
+++ b/app/src/main/res/layout/listview_article_settings.xml
@@ -63,7 +63,7 @@
             android:layout_width="match_parent"
             android:layout_height="wrap_content">
             <LinearLayout
-android:onClick="Downline_Read"
+                android:onClick="Downline_Read"
                 android:paddingLeft="100dp"
                 android:orientation="vertical"
                 android:layout_width="wrap_content"
@@ -93,7 +93,7 @@ android:onClick="Downline_Read"
                     android:layout_gravity="center"
                     android:layout_width="30dp"
                     android:layout_height="30dp"
-                    fresco:placeholderImage="@drawable/article_report"
+                    fresco:placeholderImage="@drawable/report"
                     fresco:roundAsCircle="true"
                     fresco:placeholderImageScaleType="fitCenter"/>
                 <TextView
