--- a/app/src/main/res/layout/downline_item.xml
+++ b/app/src/main/res/layout/downline_item.xml
@@ -15,7 +15,8 @@
         <TextView
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:id="@+id/"/>
+            android:id="@+id/downline_tt"
+            android:text="离线阅读"/>
     </RelativeLayout>
 
    <RelativeLayout
